--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
+
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header><h1>Fitness Website</h1></header>
