--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <header><h1>Fitness Website</h1></header>
     <main><p>Fitness Website</p></main>
     <footer><p>Fitness Website</p></footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
