--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header><h1>Fitness Website</h1></header>
+    <header class="header"><h1>Fitness Website</h1></header>
     <main><p>Fitness Website</p></main>
     <footer><p>Fitness Website</p></footer>
 
