--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <header class="header"><h1>Fitness Website</h1></header>
+    <header class="header">
+      <a href="#" class="logo">Fitness Website</a>
+    </header>
     <main><p>Fitness Website</p></main>
     <footer><p>Fitness Website</p></footer>
 
