--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Fitness Website</title>
 
     <link
@@ -11,11 +12,22 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
 
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo">Fitness Website</a>
+      <a href="#" class="logo"><span>Fitness</span> Website</a>
+
+      <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#trainers">Trainers</a>
+        <a href="#blogs">Blogs</a>
+      </nav>
     </header>
     <main><p>Fitness Website</p></main>
     <footer><p>Fitness Website</p></footer>
