--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <header class="header">
       <a href="#" class="logo"><span>Fitness</span> Website</a>
 
+      <div id="menu-btn" class="fas fa-bars"></div>
+
       <nav class="navbar">
         <a href="#home">Home</a>
         <a href="#about">About</a>
