--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#blogs">Blogs</a>
       </nav>
     </header>
-    <main><p>Fitness Website</p></main>
+    <main><h1>Fitness Website</h1></main>
     <footer><p>Fitness Website</p></footer>
 
     <script src="js/main.js"></script>
