--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <a href="#blogs">Blogs</a>
       </nav>
     </header>
-    <main><h1>Fitness Website</h1></main>
+    <main>
+      <section class="home"><h1>Fitness Website</h1></section>
+    </main>
     <footer><p>Fitness Website</p></footer>
 
     <script src="js/main.js"></script>
