--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
     <main>
-      <section class="home"><h1>Fitness Website</h1></section>
+      <section class="home" id="home"><h1>Fitness Website</h1></section>
     </main>
     <footer><p>Fitness Website</p></footer>
 
