--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
       </nav>
     </header>
     <main>
-      <section class="home" id="home"><h1>Fitness Website</h1></section>
+      <section class="home" id="home">
+        <h1>Fitness Website</h1>
+
+        <div class="home-slider">
+          <div class="wrapper">
+            <div class="slide"></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer><p>Fitness Website</p></footer>
 
