--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
         <div class="home-slider">
           <div class="wrapper">
-            <div class="slide"></div>
+            <div class="slide">
+              <div class="content"></div>
+            </div>
           </div>
         </div>
       </section>
