--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
         <div class="home-slider">
           <div class="wrapper">
             <div class="slide">
-              <div class="content"></div>
+              <div class="content">
+                <span>
+                  Blood, sweat and respect. First two you give, last one you
+                  earn!
+                </span>
+              </div>
             </div>
           </div>
         </div>
