--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                   Blood, sweat and respect. First two you give, last one you
                   earn!
                 </span>
+                <h2>Failure's not an option. It's just a step.</h2>
+                <h3>
+                  Success at anything will always come down to this: focus and
+                  effort. And we control both.
+                </h3>
               </div>
             </div>
           </div>
