--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
         <div class="home-slider">
           <div class="wrapper">
-            <div class="slide">
+            <div
+              class="slide"
+              style="background: url(images/home-bg-1.jpg) no-repeat"
+            >
               <div class="content">
                 <span>
                   Blood, sweat and respect. First two you give, last one you
@@ -48,6 +51,7 @@
                   Success at anything will always come down to this: focus and
                   effort. And we control both.
                 </h3>
+                <a href="#" class="btn">Get started</a>
               </div>
             </div>
           </div>
