--- a/index.html
+++ b/index.html
@@ -54,6 +54,42 @@
                 <a href="#" class="btn">Get started</a>
               </div>
             </div>
+
+            <div
+              class="slide"
+              style="background: url(images/home-bg-2.jpg) no-repeat"
+            >
+              <div class="content">
+                <span>
+                  Blood, sweat and respect. First two you give, last one you
+                  earn!
+                </span>
+                <h2>Failure's not an option. It's just a step.</h2>
+                <h3>
+                  Success at anything will always come down to this: focus and
+                  effort. And we control both.
+                </h3>
+                <a href="#" class="btn">Get started</a>
+              </div>
+            </div>
+
+            <div
+              class="slide"
+              style="background: url(images/home-bg-3.jpg) no-repeat"
+            >
+              <div class="content">
+                <span>
+                  Blood, sweat and respect. First two you give, last one you
+                  earn!
+                </span>
+                <h2>Failure's not an option. It's just a step.</h2>
+                <h3>
+                  Success at anything will always come down to this: focus and
+                  effort. And we control both.
+                </h3>
+                <a href="#" class="btn">Get started</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
