--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
 
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.0.1/swiper-bundle.min.js"
+      integrity="sha512-Wel1xvgWR7Ua+NQ67DaGBoYU1erKDkaW8RNEgo8z2eKzvJKhacCWMVvrLbZ4uQY+b8c07xk+qwv1jWOQRYDOZg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <link rel="stylesheet" href="css/main.css" />
+
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <header class="header">
@@ -35,10 +42,10 @@
       <section class="home" id="home">
         <h1>Fitness Website</h1>
 
-        <div class="home-slider">
-          <div class="wrapper">
+        <div class="swiper home-slider">
+          <div class="swiper wrapper">
             <div
-              class="slide"
+              class="swiper-slide slide"
               style="background: url(images/home-bg-1.jpg) no-repeat"
             >
               <div class="content">
@@ -56,7 +63,7 @@
             </div>
 
             <div
-              class="slide"
+              class="swiper-slide slide"
               style="background: url(images/home-bg-2.jpg) no-repeat"
             >
               <div class="content">
@@ -74,7 +81,7 @@
             </div>
 
             <div
-              class="slide"
+              class="swiper-slide slide"
               style="background: url(images/home-bg-3.jpg) no-repeat"
             >
               <div class="content">
@@ -95,6 +102,13 @@
       </section>
     </main>
     <footer><p>Fitness Website</p></footer>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.0.1/swiper-bundle.js"
+      integrity="sha512-bA5Abu7uuZ1UJxZ+BsNT7VZouE9pQvQh+k/vY0SzaVu97iE0WjaV0f8sNXnx9TUaW0k6jKGPnXmsteiSlFQ3Fw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <script src="js/main.js"></script>
   </body>
