--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
               </div>
             </div>
           </div>
+
+          <div class="swiper-pagination"></div>
         </div>
       </section>
     </main>
