--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             style="background: url(images/home-bg-1.jpg) no-repeat"
           >
             <div class="content">
-              <span>be strong, be fit</span>
-              <h3>Make yourself stronger than your excuses.</h3>
-              <a href="#" class="btn">get started</a>
+              <span>Blood, sweat and respect.</span>
+              <h3>First two you give, <br />last one you earn.</h3>
+              <a href="#" class="btn">Get started</a>
             </div>
           </div>
 
@@ -64,9 +64,9 @@
             style="background: url(images/home-bg-2.jpg) no-repeat"
           >
             <div class="content">
-              <span>be strong, be fit</span>
-              <h3>Make yourself stronger than your excuses.</h3>
-              <a href="#" class="btn">get started</a>
+              <span>Failure's not an option.</span>
+              <h3>It's just a step.</h3>
+              <a href="#" class="btn">Get started</a>
             </div>
           </div>
 
@@ -75,9 +75,12 @@
             style="background: url(images/home-bg-3.jpg) no-repeat"
           >
             <div class="content">
-              <span>be strong, be fit</span>
-              <h3>Make yourself stronger than your excuses.</h3>
-              <a href="#" class="btn">get started</a>
+              <span
+                >Success at anything will always come down to this: <br />focus
+                and effort.</span
+              >
+              <h3>And we control both.</h3>
+              <a href="#" class="btn">Get started</a>
             </div>
           </div>
         </div>
@@ -255,7 +258,7 @@
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
-              <a href="#" class="fab fa-pinterest"></a>
+              <a href="#" class="fab fa-instagram"></a>
               <a href="#" class="fab fa-linkedin"></a>
             </div>
           </div>
@@ -269,7 +272,7 @@
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
-              <a href="#" class="fab fa-pinterest"></a>
+              <a href="#" class="fab fa-instagram"></a>
               <a href="#" class="fab fa-linkedin"></a>
             </div>
           </div>
@@ -283,7 +286,7 @@
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
-              <a href="#" class="fab fa-pinterest"></a>
+              <a href="#" class="fab fa-instagram"></a>
               <a href="#" class="fab fa-linkedin"></a>
             </div>
           </div>
@@ -298,7 +301,7 @@
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
-              <a href="#" class="fab fa-pinterest"></a>
+              <a href="#" class="fab fa-instagram"></a>
               <a href="#" class="fab fa-linkedin"></a>
             </div>
           </div>
@@ -535,8 +538,7 @@
 
         <div class="box">
           <h3>opening hours</h3>
-          <p><i class="fas fa-phone"></i> +123-456-7890</p>
-          <p><i class="fas fa-phone"></i> +111-222-3333</p>
+          <p><i class="fas fa-phone"></i>0427 075 009</p>
           <p>
             <i class="fas fa-envelope"></i
             ><a href="mailto:veryfatwombat@gmail.com"
@@ -548,7 +550,7 @@
             <a href="#" class="fab fa-facebook-f"></a>
             <a href="#" class="fab fa-twitter"></a>
             <a href="#" class="fab fa-linkedin"></a>
-            <a href="#" class="fab fa-pinterest"></a>
+            <a href="#" class="fab fa-instagram"></a>
           </div>
         </div>
 
