--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Fitness Website</title>
 
-    <!-- font awesome cdn link  -->
+    <!-- font awesome cdn link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -18,13 +18,13 @@
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
 
-    <!-- custom css file link  -->
+    <!-- custom css file link -->
     <link rel="stylesheet" href="css/main.css" />
 
     <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
-    <!-- header section starts      -->
+    <!-- header section starts -->
 
     <header class="header">
       <a href="#" class="logo"> <span>Fitness </span>Website</a>
@@ -41,9 +41,9 @@
       </nav>
     </header>
 
-    <!-- header section ends     -->
+    <!-- header section ends -->
 
-    <!-- home section starts  -->
+    <!-- home section starts -->
 
     <section class="home" id="home">
       <div class="swiper home-slider">
@@ -95,7 +95,7 @@
 
     <section class="about" id="about">
       <div class="image">
-        <img src="images/about-img.jpg" alt="" />
+        <img src="images/about-img.jpg" alt="about" />
       </div>
 
       <div class="content">
@@ -151,11 +151,11 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img src="images/f-img-1.jpg" alt="" />
+            <img src="images/f-img-1.jpg" alt="body building" />
           </div>
           <div class="content">
-            <img src="images/icon-1.png" alt="" />
-            <h3>body building</h3>
+            <img src="images/icon-1.png" alt="bodybuilding" />
+            <h3>Body building</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Similique, atque.
@@ -166,31 +166,31 @@
 
         <div class="box second">
           <div class="image">
-            <img src="images/f-img-2.jpg" alt="" />
+            <img src="images/f-img-2.jpg" alt="Gym for men" />
           </div>
           <div class="content">
-            <img src="images/icon-2.png" alt="" />
-            <h3>gym for men</h3>
+            <img src="images/icon-2.png" alt="Gym for men" />
+            <h3>Gym for men</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Similique, atque.
             </p>
-            <a href="#" class="btn">read more</a>
+            <a href="#" class="btn">Read more</a>
           </div>
         </div>
 
         <div class="box">
           <div class="image">
-            <img src="images/f-img-3.jpg" alt="" />
+            <img src="images/f-img-3.jpg" alt="Gym for women" />
           </div>
           <div class="content">
-            <img src="images/icon-3.png" alt="" />
-            <h3>gym for women</h3>
+            <img src="images/icon-3.png" alt="Gym for women" />
+            <h3>Gym for women</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Similique, atque.
             </p>
-            <a href="#" class="btn">read more</a>
+            <a href="#" class="btn">Read more</a>
           </div>
         </div>
       </div>
@@ -244,17 +244,17 @@
 
     <!-- pricing section ends -->
 
-    <!-- trainers section starts  -->
+    <!-- trainers section starts -->
 
     <section class="trainers" id="trainers">
-      <h1 class="heading"><span>expert trainers</span></h1>
+      <h1 class="heading"><span>Expert trainers</span></h1>
 
       <div class="box-container">
         <div class="box">
-          <img src="images/trainer-1.jpg" alt="" />
+          <img src="images/trainer-1.jpg" alt="Expert trainer" />
           <div class="content">
-            <span>expert trainer</span>
-            <h3>john deo</h3>
+            <span>Expert trainer</span>
+            <h3>Nick Walker</h3>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
@@ -265,10 +265,10 @@
         </div>
 
         <div class="box">
-          <img src="images/trainer-2.jpg" alt="" />
+          <img src="images/trainer-2.jpg" alt="Expert trainer" />
           <div class="content">
-            <span>expert trainer</span>
-            <h3>john deo</h3>
+            <span>Expert trainer</span>
+            <h3>Hadi Choopan</h3>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
@@ -279,10 +279,10 @@
         </div>
 
         <div class="box">
-          <img src="images/trainer-3.jpg" alt="" />
+          <img src="images/trainer-3.jpg" alt="Expert trainer" />
           <div class="content">
-            <span>expert trainer</span>
-            <h3>john deo</h3>
+            <span>Expert trainer</span>
+            <h3>Derek Lunsford</h3>
             <div class="share">
               <a href="#" class="fab fa-facebook-f"></a>
               <a href="#" class="fab fa-twitter"></a>
@@ -294,7 +294,7 @@
 
         <!-- 
         <div class="box">
-          <img src="images/trainer-4.jpg" alt="" />
+          <img src="images/trainer-4.jpg" alt="expert trainer">
           <div class="content">
             <span>expert trainer</span>
             <h3>john deo</h3>
@@ -331,8 +331,8 @@
 
     <section class="review">
       <div class="information">
-        <span>testimonials</span>
-        <h3>what our clients says</h3>
+        <span>Testimonials</span>
+        <h3>What our clients says</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
           voluptas praesentium asperiores fugiat, excepturi odit obcaecati a
@@ -345,14 +345,14 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide slide">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Accusamus, quo.
+              Fitness Gym is the cleanest and most organized gym I've ever seen!
+              I have no words to say how wonderful they are!
             </p>
             <div class="user">
-              <img src="images/pic-1.png" alt="" />
+              <img src="images/pic-1.png" alt="John Doe" />
               <div class="info">
-                <h3>john deo</h3>
-                <span>designer</span>
+                <h3>John Doe</h3>
+                <span>Designer</span>
               </div>
               <i class="fas fa-quote-left"></i>
             </div>
@@ -360,14 +360,14 @@
 
           <div class="swiper-slide slide">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Accusamus, quo.
+              Trainer makes me feel comfortable, he helps you eat better and
+              healthy! Fitness Gym has a team of excellence!
             </p>
             <div class="user">
-              <img src="images/pic-2.png" alt="" />
+              <img src="images/pic-2.png" alt="Joanna Doe" />
               <div class="info">
-                <h3>john deo</h3>
-                <span>designer</span>
+                <h3>Joanna Doe</h3>
+                <span>Manager</span>
               </div>
               <i class="fas fa-quote-left"></i>
             </div>
@@ -375,14 +375,14 @@
 
           <div class="swiper-slide slide">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Accusamus, quo.
+              They have a place for anyone, a plan for any goal, everything is
+              very flexible! I am extremely satisfied!
             </p>
             <div class="user">
-              <img src="images/pic-3.png" alt="" />
+              <img src="images/pic-3.png" alt="Davo Smith" />
               <div class="info">
-                <h3>john deo</h3>
-                <span>designer</span>
+                <h3>Davo Smith</h3>
+                <span>Driver</span>
               </div>
               <i class="fas fa-quote-left"></i>
             </div>
@@ -390,14 +390,14 @@
 
           <div class="swiper-slide slide">
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Accusamus, quo.
+              I am happy with Fitness Gym and the entire team. 1 to 10. They are
+              11!! 🥇 Cool!!!
             </p>
             <div class="user">
-              <img src="images/pic-4.png" alt="" />
+              <img src="images/pic-4.png" alt="Andrea Shaw" />
               <div class="info">
-                <h3>john deo</h3>
-                <span>designer</span>
+                <h3>Andrea Shaw</h3>
+                <span>Butcher</span>
               </div>
               <i class="fas fa-quote-left"></i>
             </div>
@@ -411,18 +411,54 @@
     <!-- blogs section starts  -->
 
     <section class="blogs" id="blogs">
-      <h1 class="heading"><span>daily posts</span></h1>
+      <h1 class="heading"><span>Daily posts</span></h1>
 
       <div class="swiper blogs-slider">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide">
             <div class="image">
-              <img src="images/blog-1.jpg" alt="" />
+              <img src="images/blog-1.jpg" alt="blog" />
             </div>
             <div class="content">
               <div class="link">
-                <a href="#">by user</a> <span>|</span>
-                <a href="#">21st may, 2021</a>
+                <a href="#">By user</a> <span>|</span>
+                <a href="#">21st May, 2023</a>
+              </div>
+              <h3>Fitness is not about being better than someone else</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Aliquam, tenetur?
+              </p>
+              <a href="#" class="btn">Read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/blog-2.jpg" alt="blog" />
+            </div>
+            <div class="content">
+              <div class="link">
+                <a href="#">By user</a> <span>|</span>
+                <a href="#">21st May, 2023</a>
+              </div>
+              <h3>Fitness is not about being better than someone else</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Aliquam, tenetur?
+              </p>
+              <a href="#" class="btn">Read more</a>
+            </div>
+          </div>
+
+          <div class="swiper-slide slide">
+            <div class="image">
+              <img src="images/blog-3.jpg" alt="blog" />
+            </div>
+            <div class="content">
+              <div class="link">
+                <a href="#">By user</a> <span>|</span>
+                <a href="#">21st May, 2023</a>
               </div>
               <h3>fitness is not about being better than someone else</h3>
               <p>
@@ -435,12 +471,12 @@
 
           <div class="swiper-slide slide">
             <div class="image">
-              <img src="images/blog-2.jpg" alt="" />
+              <img src="images/blog-4.jpg" alt="blog" />
             </div>
             <div class="content">
               <div class="link">
-                <a href="#">by user</a> <span>|</span>
-                <a href="#">21st may, 2021</a>
+                <a href="#">By user</a> <span>|</span>
+                <a href="#">21st May, 2023</a>
               </div>
               <h3>fitness is not about being better than someone else</h3>
               <p>
@@ -453,48 +489,12 @@
 
           <div class="swiper-slide slide">
             <div class="image">
-              <img src="images/blog-3.jpg" alt="" />
+              <img src="images/blog-5.jpg" alt="blog" />
             </div>
             <div class="content">
               <div class="link">
-                <a href="#">by user</a> <span>|</span>
-                <a href="#">21st may, 2021</a>
-              </div>
-              <h3>fitness is not about being better than someone else</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Aliquam, tenetur?
-              </p>
-              <a href="#" class="btn">read more</a>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/blog-4.jpg" alt="" />
-            </div>
-            <div class="content">
-              <div class="link">
-                <a href="#">by user</a> <span>|</span>
-                <a href="#">21st may, 2021</a>
-              </div>
-              <h3>fitness is not about being better than someone else</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Aliquam, tenetur?
-              </p>
-              <a href="#" class="btn">read more</a>
-            </div>
-          </div>
-
-          <div class="swiper-slide slide">
-            <div class="image">
-              <img src="images/blog-5.jpg" alt="" />
-            </div>
-            <div class="content">
-              <div class="link">
-                <a href="#">by user</a> <span>|</span>
-                <a href="#">21st may, 2021</a>
+                <a href="#">By user</a> <span>|</span>
+                <a href="#">21st May, 2023</a>
               </div>
               <h3>fitness is not about being better than someone else</h3>
               <p>
@@ -564,9 +564,8 @@
               name=""
               class="email"
               placeholder="enter your email"
-              id=""
-            />
-            <input type="submit" value="subscribe" class="btn" />
+              id="">
+            <input type="submit" value="subscribe" class="btn">
           </form>
         </div>
         -->
@@ -581,14 +580,12 @@
             href="http://fb.com/darentacom"
             title="Full stack developer Oleg Gribanov"
             target="_blank"
-            class="copyright__a"
             >Oleg</a
           >
           <a
             href="http://linkedin.com/in/neoguru"
             title="Full stack developer Oleg Gribanov"
             target="_blank"
-            class="copyright__a"
             >Gribanov</a
           >
         </span>
@@ -599,7 +596,7 @@
           <i class="fab fa-js"></i>
         </span>
 
-        <span class="copyright__right-span"> 2021 </span>
+        <span class="copyright__right-span"> 2023</span>
       </p>
     </div>
 
