--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <div id="menu-btn" class="fas fa-bars"></div>
 
       <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#about">about</a>
-        <a href="#features">features</a>
-        <a href="#pricing">pricing</a>
-        <a href="#trainers">trainers</a>
-        <a href="#blogs">blogs</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#pricing">Pricing</a>
+        <a href="#trainers">Trainers</a>
+        <a href="#blogs">Blogs</a>
       </nav>
     </header>
 
