--- a/index.html
+++ b/index.html
@@ -518,12 +518,12 @@
       <div class="box-container">
         <div class="box">
           <h3>quick links</h3>
-          <a class="links" href="#home">home</a>
-          <a class="links" href="#about">about</a>
-          <a class="links" href="#features">features</a>
-          <a class="links" href="#pricing">pricing</a>
-          <a class="links" href="#trainers">trainers</a>
-          <a class="links" href="#blogs">blogs</a>
+          <a class="links" href="#home">Home</a>
+          <a class="links" href="#about">About</a>
+          <a class="links" href="#features">Features</a>
+          <a class="links" href="#pricing">Pricing</a>
+          <a class="links" href="#trainers">Trainers</a>
+          <a class="links" href="#blogs">Blogs</a>
         </div>
 
         <div class="box">
