--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
       </div>
 
       <div class="content">
-        <span>about us</span>
+        <span>About us</span>
         <h3 class="title">Every day is a chance to become better</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quia
-          accusamus dicta inventore nobis obcaecati vero odio, id dolorum.
-          Consequatur ex, aperiam deserunt nostrum perferendis illum unde ipsa?
-          Consequatur, distinctio?
+          Achieve your Fat Loss Goals - Join Fitness Website today! Our most
+          popular program for First-Timers designed to help you achieve your Fat
+          Loss Goals. Enjoy access to Customised Meal Guides, Home & Gym
+          Workouts + support you.
         </p>
         <div class="box-container">
           <div class="box">
