--- a/index.html
+++ b/index.html
@@ -109,11 +109,8 @@
         </p>
         <div class="box-container">
           <div class="box">
-            <h3><i class="fas fa-check"></i>body and mind</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
-              enim.
-            </p>
+            <h3><i class="fas fa-check"></i>Body and mind</h3>
+            <p>Awaken to a healthier, happier you.</p>
           </div>
           <div class="box">
             <h3><i class="fas fa-check"></i>healthy life</h3>
