--- a/index.html
+++ b/index.html
@@ -113,11 +113,8 @@
             <p>Awaken to a healthier, happier you.</p>
           </div>
           <div class="box">
-            <h3><i class="fas fa-check"></i>healthy life</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
-              enim.
-            </p>
+            <h3><i class="fas fa-check"></i>Healthy life</h3>
+            <p>The best products for your wellness.</p>
           </div>
           <div class="box">
             <h3><i class="fas fa-check"></i>strategies</h3>
