--- a/index.html
+++ b/index.html
@@ -117,11 +117,8 @@
             <p>The best products for your wellness.</p>
           </div>
           <div class="box">
-            <h3><i class="fas fa-check"></i>strategies</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
-              enim.
-            </p>
+            <h3><i class="fas fa-check"></i>Strategies</h3>
+            <p>Partner with local fitness influencers.</p>
           </div>
           <div class="box">
             <h3><i class="fas fa-check"></i>workout</h3>
