--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p>Partner with local fitness influencers.</p>
           </div>
           <div class="box">
-            <h3><i class="fas fa-check"></i>workout</h3>
+            <h3><i class="fas fa-check"></i>Workout</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Est,
               enim.
