--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </p>
           </div>
         </div>
-        <a href="#" class="btn">read more</a>
+        <a href="#" class="btn">Read more</a>
       </div>
     </section>
 
@@ -137,7 +137,7 @@
     <!-- features section starts  -->
 
     <section class="features" id="features">
-      <h1 class="heading"><span>gym features</span></h1>
+      <h1 class="heading"><span>Gym features</span></h1>
 
       <div class="box-container">
         <div class="box">
