--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
             <img src="images/icon-1.png" alt="bodybuilding" />
             <h3>Body building</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Similique, atque.
+              Manage gym memberships, class schedules, check-ins and payments
+              from one intuitive system.
+              <!-- Streamline your business with our all-in-1 gym management, booking and marketing system. Online & Mobile Payments. Easy to Use. Branded Website Portal. -->
             </p>
             <a href="#" class="btn">read more</a>
           </div>
