--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               from one intuitive system.
               <!-- Streamline your business with our all-in-1 gym management, booking and marketing system. Online & Mobile Payments. Easy to Use. Branded Website Portal. -->
             </p>
-            <a href="#" class="btn">read more</a>
+            <a href="#" class="btn">Read more</a>
           </div>
         </div>
 
