--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolore
           excepturi ea suscipit fugiat cum quae, rerum optio mollitia! Tempora?
         </p>
-        <p><i class="fas fa-check"></i> cardio exercise</p>
+        <p><i class="fas fa-check"></i> Cardio exercise</p>
         <p><i class="fas fa-check"></i> weight lifting</p>
         <p><i class="fas fa-check"></i> diet plans</p>
         <p><i class="fas fa-check"></i> overall results</p>
