--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           excepturi ea suscipit fugiat cum quae, rerum optio mollitia! Tempora?
         </p>
         <p><i class="fas fa-check"></i> Cardio exercise</p>
-        <p><i class="fas fa-check"></i> weight lifting</p>
+        <p><i class="fas fa-check"></i> Weight lifting</p>
         <p><i class="fas fa-check"></i> diet plans</p>
         <p><i class="fas fa-check"></i> overall results</p>
         <a href="#" class="btn">all pricing</a>
